--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@nuxtjs/tailwindcss": "^6.11.0",
     "nuxt": "^3.9.3",
     "nuxt-icon": "^0.6.8",
+    "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "party-js": "^2.2.0"
+    "firebase": "^10.7.2"
   }
 }
