--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "devDependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "@iconify-json/fluent-emoji-flat": "^1.1.16",
+    "@iconify-json/material-symbols": "^1.1.71",
     "@nuxt/image": "^1.3.0",
+    "@nuxt/ui": "^2.12.3",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.0",
     "nuxt": "^3.9.3",
-    "nuxt-icon": "^0.6.8",
     "sass": "^1.70.0",
     "typescript": "^5.3.3",
+    "unplugin-icons": "^0.18.2",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
