--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@formkit/auto-animate": "^0.8.1",
     "@iconify-json/fluent-emoji-flat": "^1.1.16",
     "@iconify-json/material-symbols": "^1.1.71",
     "@nuxt/image": "^1.3.0",
     "@nuxt/ui": "^2.12.3",
     "@nuxtjs/google-fonts": "^3.1.3",
-    "@nuxtjs/tailwindcss": "^6.11.0",
+    "@nuxtjs/tailwindcss": "^6.11.2",
+    "autoprefixer": "^10.4.17",
     "nuxt": "^3.9.3",
+    "postcss": "^8.4.33",
     "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "unplugin-icons": "^0.18.2",
+    "unplugin-icons": "^0.18.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
