--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "0.9.72",
     "@googlemaps/polyline-codec": "^1.0.28",
+    "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.7.2",
     "jarallax": "^2.2.1",
     "object-fit-images": "^3.2.4"
